# arc_transduction

./: .gitignore  INFERENCE_METHODS.md  README.md  analyze_token_counts.py  augment.py  create_train_data.py  dspy_optimize.py  evaluate_model.py  from_barc_to_transduction_data.py  from_datasets_to_data.py  from_soar_to_transduction_data.py  loader.py  optimized_prompt.txt  oss_sft.py  oss_sft_multigpu.py  placeholder_creation.py  pyproject.toml  qwen3_vl_sft.py  reward_functions.py  test_output_eval.json  test_output_leaveoneout.json  test_small_run.py  test_time_evaluate_model.py  transduction_rl_multigpu.py  transduction_rl_unigpu.py  transduction_sft_multigpu.py  transduction_test.py  transduction_unigpu.py  visualize_training_data.ipynb
barc_training_data/: barc_task_0.json  barc_task_1.json  barc_task_2.json  barc_task_3.json  barc_task_4.json  barc_task_5.json  barc_task_6.json  barc_task_7.json  barc_task_8.json  barc_task_9.json
dspy_test/: prompt.txt
eval_conceptarc/: AboveBelow9.json  Center9.json  CleanUp9.json  CompleteShape9.json  Copy9.json  Count9.json  ExtendToBoundary9.json  ExtractObjects9.json  FilledNotFilled9.json  HorizontalVertical9.json  InsideOutside9.json  MoveToBoundary9.json  Order9.json  SameDifferent9.json  TopBottom2D9.json  TopBottom3D9.json
files/: FILTERING_SUMMARY.md  arc_statistics_detailed.json  check_threshold.py  dspy_prompt_opti.ipynb  from_conversation_to_arc_json.py  induction_eval.py  induction_rl.py  induction_sft.py  loader.py  statistics.py  test.py  test_reward_functions.py  transduction_test.py
train_conceptarc/: AboveBelow1.json  AboveBelow10.json  AboveBelow2.json  AboveBelow3.json  AboveBelow4.json  AboveBelow5.json  AboveBelow6.json  AboveBelow7.json  AboveBelow8.json  Center1.json  Center10.json  Center2.json  Center3.json  Center4.json  Center5.json  Center6.json  Center7.json  Center8.json  CleanUp1.json  CleanUp10.json  CleanUp2.json  CleanUp3.json  CleanUp4.json  CleanUp5.json  CleanUp6.json  CleanUp7.json  CleanUp8.json  CompleteShape1.json  CompleteShape10.json  CompleteShape2.json  CompleteShape3.json  CompleteShape4.json  CompleteShape5.json  CompleteShape6.json  CompleteShape7.json  CompleteShape8.json  Copy1.json  Copy10.json  Copy2.json  Copy3.json  (+104 more)
